--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -208,10 +208,15 @@
                     </tr>
                 </thead>
                 <tbody>
+		    <tr>
+                        <th scope="row">2022</th>
+                        <td>247.6</td>
+                        <td>379.2</td>
+                    </tr>
                     <tr>
                         <th scope="row">2021</th>
-                        <td>253</td>
-                        <td>353.6</td>
+                        <td>253.4</td>
+                        <td>348</td>
                     </tr>
                     <tr>
                         <th scope="row">2020</th>
@@ -231,17 +236,12 @@
                     <tr>
                         <th scope="row">2017</th>
                         <td>204</td>
-                        <td>291-300</td>
+                        <td>(inne zasady)</td>
                     </tr>
                     <tr>
                         <th scope="row">2016</th>
                         <td>150</td>
-                        <td>291-300</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2015</th>
-                        <td>120</td>
-                        <td>291-300</td>
+                        <td>(inne zasady)</td>
                     </tr>
                 </tbody>
             </table>
