--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -109,7 +109,7 @@
         <!-- pasek nawigacyjny -->
         <nav class="navbar navbar-expand-md navbar-dark bg-primary">
             <!-- Tytuł paska nawigacyjnego -->
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="https://ii.uni.wroc.pl/kalkulator">
                 Kalkulator punktów
             </a>
 
@@ -122,8 +122,13 @@
             <div class="collapse navbar-collapse">
 
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Home
+                        <li class="nav-item active">
+                        <a class="nav-link" href="https://ii.uni.wroc.pl/kalkulator">Home
+                            <span class="sr-only">(current)</span>
+                        </a>
+
+		        <li class="nav-item active">
+                        <a class="nav-link" href="https://ii.uni.wroc.pl/">II UWr
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
