--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -125,12 +125,9 @@
                         <li class="nav-item active">
                         <a class="nav-link" href="https://ii.uni.wroc.pl/kalkulator">Home
                             <span class="sr-only">(current)</span>
-                        </a>
-
+			</a>
 		        <li class="nav-item active">
-                        <a class="nav-link" href="https://ii.uni.wroc.pl/">II UWr
-                            <span class="sr-only">(current)</span>
-                        </a>
+                        <a class="nav-link" href="https://ii.uni.wroc.pl/">II UWr</a>
                     </li>
                 </ul>
             </div>
