--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -126,7 +126,7 @@
                         <a class="nav-link" href="https://ii.uni.wroc.pl/kalkulator">Home
                             <span class="sr-only">(current)</span>
 			</a>
-		        <li class="nav-item active">
+		        <li class="nav-item">
                         <a class="nav-link" href="https://ii.uni.wroc.pl/">II UWr</a>
                     </li>
                 </ul>
