--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -114,12 +114,12 @@
             </a>
 
             <!-- Guzik menu, który się pojawia po zmianie szerokości paska -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04"
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-kalkulator" aria-controls="navbar-kalkulator"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse">
+	    <div class="collapse navbar-collapse" id="navbar-kalkulator">>
 
                 <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
