--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -119,7 +119,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-	    <div class="collapse navbar-collapse" id="navbar-kalkulator">>
+	    <div class="collapse navbar-collapse" id="navbar-kalkulator">
 
                 <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
