--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -254,17 +254,17 @@
                 <caption></caption>
                 <thead>
                     <tr>
-                        <td scope="col">Przedmiot
-                        </td>
-                        <td scope="col">Poziom podstawowy
-                        </td>
-                        <td scope="col">Poziom rozszerzony
-                        </td>
+                        <th scope="col">Przedmiot
+                        </th>
+                        <th scope="col">Poziom podstawowy
+                        </th>
+                        <th scope="col">Poziom rozszerzony
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td scope="row">informatyka
+                        <td>informatyka
                         </td>
                         <td>0,5
                         </td>
@@ -272,7 +272,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td scope="row">matematyka
+                        <td>matematyka
                         </td>
                         <td>0,5
                         </td>
@@ -280,7 +280,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td scope="row">przedmiot (jeden do wyboru)
+                        <td>przedmiot (jeden do wyboru)
                             <br>fizyka z astronomią, matematyka, informatyka
                         </td>
                         <td>0,25
@@ -289,7 +289,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td scope="row">dowolny język obcy nowożytny (pisemny)
+                        <td>dowolny język obcy nowożytny (pisemny)
                         </td>
                         <td>0,2
                         </td>
@@ -311,17 +311,17 @@
                 <caption></caption>
                 <thead>
                     <tr>
-                        <td scope="col">Przedmiot
-                        </td>
-                        <td scope="col">Poziom podstawowy
-                        </td>
-                        <td scope="col">Poziom rozszerzony
-                        </td>
+                        <th scope="col">Przedmiot
+                        </th>
+                        <th scope="col">Poziom podstawowy
+                        </th>
+                        <th scope="col">Poziom rozszerzony
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td scope="row">informatyka
+                        <td>informatyka
                         </td>
                         <td>-
                         </td>
@@ -329,7 +329,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td scope="row">matematyka
+                        <td>matematyka
                         </td>
                         <td>-
                         </td>
@@ -337,7 +337,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td scope="row">przedmiot (jeden do wyboru)
+                        <td>przedmiot (jeden do wyboru)
                             <br>fizyka z astronomią, matematyka, informatyka
                         </td>
                         <td>-
@@ -346,7 +346,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td scope="row">dowolny język obcy nowożytny (pisemny)
+                        <td>dowolny język obcy nowożytny (pisemny)
                         </td>
                         <td>0,2
                         </td>
