--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -170,7 +170,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="col-3">Język</td>
+                <td class="col-3">dowolny język obcy nowożytny (pisemny) </td>
                 <td class="col-2">
                     <input class="form-control" type='number' min="0" max="100" id='jezp' placeholder=0 />
                 </td>
@@ -361,7 +361,8 @@
                 <strong>Więcej informacji:</strong> <br>
                 <a href="https://rekrutacja.uni.wroc.pl/kierunek/informatyka-i-stopnia-stacjonarne-licencjackie-i-inzynierskie/#zasady">Informatyka</a><br>
                 <a href="https://rekrutacja.uni.wroc.pl/kierunek/indywidualne-studia-informatyczno-matematyczne-isim-i-stopnia-stacjonarne/#zasady">ISIM</a>
-
+		<br>
+		<p>Kontakt: promocja@cs.uni.wroc.pl</p>
             </div>
         </div>
 </body>
