--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -127,7 +127,11 @@
                             <span class="sr-only">(current)</span>
 			</a>
 		        <li class="nav-item">
-                        <a class="nav-link" href="https://ii.uni.wroc.pl/">II UWr</a>
+                        <a class="nav-link" href="https://ii.uni.wroc.pl/questions">Informatyka UWr</a>
+                    </li>
+		    
+		        <li class="nav-item">
+                        <a class="nav-link" href="https://www.wmi.uni.wroc.pl/isim">ISIM UWr</a>
                     </li>
                 </ul>
             </div>
