--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -127,7 +127,7 @@
                             <span class="sr-only">(current)</span>
 			</a>
 		        <li class="nav-item">
-                        <a class="nav-link" href="https://ii.uni.wroc.pl/questions">Informatyka UWr</a>
+                        <a class="nav-link" href="https://ii.uni.wroc.pl/dla-studenta/questions">Informatyka UWr</a>
                     </li>
 		    
 		        <li class="nav-item">
