--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -93,7 +93,7 @@
             document.getElementById('answer').innerHTML = res;
         }
     </script>
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="kalkulator/styles/style.css">
 </head>
 
 <body>
