--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -219,6 +219,10 @@
                 </thead>
                 <tbody>
 		    <tr>
+			    <th scope="row">2024</th>
+			    <td>367.2</td>
+			    <td>183.8</td>
+		    <tr>
                         <th scope="row">2023</th>
                         <td>275.0</td>
                         <td>396.8</td>
